@@ -1,0 +1,48 @@
+.TH UPDATE-SMART-DRIVEDB 8 "May 15, 2013" "smartmontools" ""
+.SH "NAME"
+update-smart-drivedb \- update smartmontools drive database
+.SH "SYNOPSIS"
+.B update-smart-drivedb
+.RB [ -v ]
+.RI [ DESTFILE ]
+
+.SH "DESCRIPTION"
+.B update-smart-drivedb
+updates
+.B /usr/share/smartmontools/drivedb.h
+or
+.I DESTFILE
+from smartmontools SVN repository.
+
+It tries to download first from the current branch and then from
+trunk. The tools used for downloading are either
+.BR curl (1),
+.BR wget "(1) or"
+.BR lynx (1).
+
+The old file is kept if the downloaded file is identical (ignoring
+the differences in Id string) otherwise it is moved to
+.BR drivedb.h.old .
+
+.SH "OPTIONS"
+.TP
+\-v
+verbose output
+
+.SH "EXAMPLES"
+.nf
+# update-smart-drivedb
+/usr/share/smartmontools/drivedb.h updated from branches/RELEASE_5_43_DRIVEDB
+.fi
+
+.SH "EXIT STATUS"
+The exit status is 0 if the database has been successfully
+updated. If an error occurs the exit status is 1.
+
+.SH "SEE ALSO"
+.BR smartctl(8),
+.BR smartd (8).
+
+.SH "AUTHOR"
+This manual page was written by
+.BR "Hannes von Haugwitz <hannes@vonhaugwitz.com>" .
